    Minimum value is limited to "0.1", maximum value cannot exceed "radar_fade_out_radius".
    Default value is "0.8".
  - Renamed options "show_fade_out, fade_in_radius, fade_out_radius" to
    "show_edge_fade_out, edge_fade_in_radius, edge_fade_out_radius" to
    distinguish them from new radar fade options.

* Session Widget
  - Removed "lap number" and "driver position" readings. Those two readings are now included in
    the new "Laps and position Widget".
  - Add "layout" option, which sets display orientation.
    Default is horizontal. Set "0" to show vertically.

* Speedometer Widget
  - Changed default "layout" setting value to "1" for horizontal layout for consistency.

* Tyre wear Widget
  - Now uses laptime pace for calculating "tyre lifespan in minutes".

* [Reworked]Weather Widget
  - Add weather trend indication, which shows whether there has been an increasing or
    decreasing trend for temperature, raininess, wetness readings for a given period.
    This can be useful to determine pit stop strategy.
  - Add "temperature_trend_interval", "raininess_trend_interval", "wetness_trend_interval"
    options, which set each trend interval in seconds. Default interval is "60" seconds.
  - Add "prefix_rain", "prefix_dry", "prefix_wet", "font_color_trend_constant",
    "font_color_trend_decreasing", "font_color_trend_increasing" options.
  - Improved display formatting for temperature, raininess, wetness readings.

* Weather forecast Widget
  - The "now" column always shows current weather condition
    even if RestAPI Module is disabled.

* Misc
  - Updated User Guide for all changes mentioned above and additional usage info.
  - Added new contributor Sihyung Park (naturale0) to contributors.md.

2.17.4 (2024-08-30)
-----------------------------
* General
  - Fixed state check error while restarting API in rare case.
  - Add clickable API button on main window status bar
    that opens "Shared Memory API" config dialog for easy access.

* Fuel calculator