@@ -1728,10 +1728,13 @@ Show random color for unknown class name that is not defined in `classes.json`.
 Set class name display width, value is in chars, 4 = 4 chars wide.
 
     show_pit_status
-Show indicator whether driver is currently in pit.
+Show indicator whether driver is currently in pit or garage.
 
     pit_status_text
 Set custom pit status text which shows when driver is in pit.
+
+    garage_status_text
+Set custom garage status text which shows when driver is in garage.
 
     show_tyre_compound
 Show tyre compound index (front/rear).
