@@ -1191,6 +1191,9 @@ WIDGET_DEFAULT = {
         "pit_status_text": "P",
         "font_color_pit": "#000000",
         "bkg_color_pit": "#00CCEE",
+        "garage_status_text": "G",
+        "font_color_garage": "#000000",
+        "bkg_color_garage": "#888888",
         "show_tyre_compound": True,
         "font_color_tyre_compound": "#AAAAAA",
         "bkg_color_tyre_compound": "#2A2A2A",
@@ -1353,6 +1356,9 @@ WIDGET_DEFAULT = {
         "pit_status_text": "P",
         "font_color_pit": "#000000",
         "bkg_color_pit": "#00CCEE",
+        "garage_status_text": "G",
+        "font_color_garage": "#000000",
+        "bkg_color_garage": "#888888",
         "show_tyre_compound": True,
         "font_color_tyre_compound": "#AAAAAA",
         "bkg_color_tyre_compound": "#2A2A2A",
@@ -1555,6 +1561,9 @@ WIDGET_DEFAULT = {
         "pit_status_text": "P",
         "font_color_pit": "#000000",
         "bkg_color_pit": "#00CCEE",
+        "garage_status_text": "G",
+        "font_color_garage": "#000000",
+        "bkg_color_garage": "#888888",
         "show_tyre_compound": True,
         "font_color_tyre_compound": "#AAAAAA",
         "bkg_color_tyre_compound": "#2A2A2A",
